Updated scripts for portable build